Added multiple event catchers to play audio through user interaction

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </iframe>
   </div>
 
-  <audio autoplay loop id="wait-audio">
+  <audio loop id="wait-audio">
     <source src="./audio.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
