Removed iframe and moved to youtube link

--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
   <div id="container">
     <span id="content"></span>
     <button id="surprise-button" onclick="showVideo();">
-      Click me!
+      Press me!
     </button>
-    <iframe id="hamster-video" width="560" height="700" src="https://www.youtube.com/embed/LydG44oIywc?si=x_ZK8yt8CshEW_60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </iframe>
   </div>
 
   <audio loop id="wait-audio">
